Import hidden and enum summary metrics

--- a/definitions/infra-rabbitmqnode/summary_metrics.yml
+++ b/definitions/infra-rabbitmqnode/summary_metrics.yml
@@ -19,3 +19,48 @@ fileDescriptorsTotalUsed:
     from: RabbitmqNodeSample
   unit: COUNT
   title: File descriptors total used
+diskAlarmHidden:
+  unit: COUNT
+  query:
+    select: latest(`node.diskAlarm`)
+    from: RabbitmqNodeSample
+    eventId: entityGuid
+  hidden: true
+diskAlarm:
+  unit: STRING
+  title: Disk alarm
+  enum:
+    metric: '@diskAlarmHidden'
+    values:
+      0: 'No'
+      1: 'Yes'
+memoryAlarmHidden:
+  unit: COUNT
+  query:
+    select: average(`node.hostMemoryAlarm`)
+    from: RabbitmqNodeSample
+    eventId: entityGuid
+  hidden: true
+memoryAlarm:
+  unit: STRING
+  title: Memory alarm
+  enum:
+    metric: '@memoryAlarmHidden'
+    values:
+      0: 'No'
+      1: 'Yes'
+runningHidden:
+  unit: COUNT
+  query:
+    select: average(`node.running`)
+    from: RabbitmqNodeSample
+    eventId: entityGuid
+  hidden: true
+running:
+  unit: STRING
+  title: Running
+  enum:
+    metric: '@runningHidden'
+    values:
+      0: 'No'
+      1: 'Yes'
