--- a/definitions/infra-container/summary_metrics.yml
+++ b/definitions/infra-container/summary_metrics.yml
@@ -19,7 +19,7 @@ cpuUsedCoresK8s:
   unit: COUNT
   hidden: true
 cpuUsedCores:
-  derive: "@cpuUsedCoresContainer || @cpuUsedCoresK8s \n"
+  derive: '@cpuUsedCoresContainer || @cpuUsedCoresK8s'
   unit: COUNT
 cpuUtilizationPercentContainer:
   query:
@@ -36,9 +36,7 @@ cpuUtilizationPercentK8s:
   unit: PERCENTAGE
   hidden: true
 cpuUtilizationPercent:
-  derive: '@cpuUtilizationPercentContainer || @cpuUtilizationPercentK8s
-
-    '
+  derive: '@cpuUtilizationPercentContainer || @cpuUtilizationPercentK8s'
   unit: PERCENTAGE
   title: CPU Utilization
 diskUsedContainer:
@@ -58,9 +56,7 @@ diskUsedK8s:
 diskUsed:
   title: Disk usage (bytes)
   unit: BYTES
-  derive: '@diskUsedContainer || @diskUsedK8s
-
-    '
+  derive: '@diskUsedContainer || @diskUsedK8s'
 memoryUsedContainer:
   query:
     eventId: entityGuid
@@ -76,9 +72,7 @@ memoryUsedK8s:
   unit: BYTES
   hidden: true
 memoryUsed:
-  derive: '@memoryUsedContainer || @memoryUsedK8s
-
-    '
+  derive: '@memoryUsedContainer || @memoryUsedK8s'
   title: Memory usage (bytes)
   unit: BYTES
 networkTrafficRx:
@@ -96,8 +90,6 @@ networkTrafficTx:
   unit: BYTES_PER_SECOND
   hidden: true
 networkTrafficTotal:
-  derive: '@networkTrafficRx + @networkTrafficTx
-
-    '
+  derive: '@networkTrafficRx + @networkTrafficTx'
   title: Network traffic (bytes per second)
   unit: BYTES_PER_SECOND
