--- a/definitions/infra-host/summary_metrics.yml
+++ b/definitions/infra-host/summary_metrics.yml
@@ -32,10 +32,7 @@ cpuUtilizationPercentGcp:
   hidden: true
 cpuUtilizationPercent:
   unit: PERCENTAGE
-  derive: '@cpuUtilizationPercentEc2 || @cpuUtilizationPercentAzure || @cpuUtilizationPercentGcp
-    || @cpuUtilizationPercentHost
-
-    '
+  derive: '@cpuUtilizationPercentEc2 || @cpuUtilizationPercentAzure || @cpuUtilizationPercentGcp || @cpuUtilizationPercentHost'
 memoryUsedPercent:
   unit: PERCENTAGE
   query:
@@ -64,9 +61,7 @@ networkOutHost:
   hidden: true
 networkTrafficHost:
   unit: BYTES_PER_SECOND
-  derive: '@networkInHost + @networkOutHost
-
-    '
+  derive: '@networkInHost + @networkOutHost'
   hidden: true
 networkInEc2:
   unit: BYTES_PER_SECOND
@@ -104,9 +99,7 @@ networkOutAzure:
   hidden: true
 networkTrafficAzure:
   unit: BYTES_PER_SECOND
-  derive: '(@networkInAzure + @networkOutAzure) / 60
-
-    '
+  derive: '(@networkInAzure + @networkOutAzure) / 60'
   hidden: true
 networkInGcp:
   unit: BYTES_PER_SECOND
@@ -124,12 +117,8 @@ networkOutGcp:
   hidden: true
 networkTrafficGcp:
   unit: BYTES_PER_SECOND
-  derive: '(@networkInGcp + @networkOutGcp) / 60
-
-    '
+  derive: '(@networkInGcp + @networkOutGcp) / 60'
   hidden: true
 networkTraffic:
   unit: BYTES_PER_SECOND
-  derive: '@networkTrafficEc2 || @networkTrafficAzure || @networkTrafficGcp || @networkTrafficHost
-
-    '
+  derive: '@networkTrafficEc2 || @networkTrafficAzure || @networkTrafficGcp || @networkTrafficHost'
