--- a/definitions/mobile-application/summary_metrics.yml
+++ b/definitions/mobile-application/summary_metrics.yml
@@ -61,15 +61,11 @@ networkFailureCount:
   hidden: true
 totalNetworkCount:
   unit: COUNT
-  derive: '@networkFailureCount + @httpErrorCount + @httpRequestCount
-
-    '
+  derive: '@networkFailureCount + @httpErrorCount + @httpRequestCount'
   hidden: true
 httpErrorRate:
   unit: PERCENTAGE
-  derive: '(100 * @httpErrorCount) / @totalNetworkCount
-
-    '
+  derive: '(100 * @httpErrorCount) / @totalNetworkCount'
 usersAffectedCount:
   unit: COUNT
   query:
