Use DOMAIN_IDS for SM

--- a/definitions/mobile-application/summary_metrics.yml
+++ b/definitions/mobile-application/summary_metrics.yml
@@ -5,14 +5,14 @@ appLaunchCount:
     from: Mobile
     select: uniqueCount(sessionId)
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
 mobileSessionCrashCount:
   unit: COUNT
   query:
     from: MobileCrash
     select: uniqueCount(sessionId)
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
   hidden: true
 mobileSessionCount:
   unit: COUNT
@@ -20,7 +20,7 @@ mobileSessionCount:
     from: MobileSession
     select: uniqueCount(sessionId)
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
   hidden: true
 crashRate:
   unit: PERCENTAGE
@@ -32,7 +32,7 @@ crashCount:
     from: MobileCrash
     select: count(*)
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
 httpRequestCount:
   title: Http Requests
   unit: COUNT
@@ -40,7 +40,7 @@ httpRequestCount:
     from: MobileRequest
     select: count(requestFingerprint)
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
 httpErrorCount:
   unit: COUNT
   query:
@@ -48,7 +48,7 @@ httpErrorCount:
     select: count(*)
     where: errorType = 'HTTPError'
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
   hidden: true
 networkFailureCount:
   unit: COUNT
@@ -57,7 +57,7 @@ networkFailureCount:
     select: count(*)
     where: errorType = 'NetworkFailure'
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
   hidden: true
 totalNetworkCount:
   unit: COUNT
@@ -72,7 +72,7 @@ usersAffectedCount:
     from: MobileCrash
     select: uniqueCount(uuid)
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
   hidden: true
 httpResponseTimeAverage:
   unit: SECONDS
@@ -80,7 +80,7 @@ httpResponseTimeAverage:
     from: MobileRequest
     select: average(responseTime OR duration)
     eventId: appId
-    eventObjectId: DOMAIN_ID
+    eventObjectId: DOMAIN_IDS
   hidden: true
 newtworkFailureRate:
   unit: PERCENTAGE
